--- a/index.html
+++ b/index.html
@@ -33,7 +33,18 @@
 			</svg>
 		</div>
 		<div id="clock">
-			<div id="time-display">&ensp;&ensp;&ensp;&ensp;&ensp;</div>
+			<div id="time-display">
+				<div class="clockHere">
+				  <div><div></div><div></div></div>
+				  <div><div></div><div></div></div>
+				  <div><div></div><div></div></div>
+				  <div><div></div><div></div></div>
+				  <div><div></div><div></div></div>
+				  <div><div></div><div></div></div>
+				  <div><div></div><div></div></div>
+				  <div><div></div><div></div></div>
+				</div>
+			</div>
 			<div id="date-display"></div>
 		</div>
 		<div class="cat-blocker">
