--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 			</div>
 			<div id="date-display"></div>
 		</div>
+		<div class="horizon-blocker"></div>
 		<div class="cat-blocker">
 			<div class="patte patte-gauche">
 				<span class="d d-1"></span>
