--- a/index.html
+++ b/index.html
@@ -98,10 +98,14 @@
 					  <path class="nose-two" d="M0,4 L0,8 M0,8 Q-4,12 -8,8 M0,8 Q4,12 8,8" />
 					</g>
 					<g id="eyes-normal">
-						   <circle class="eye-white" cx="80" cy="105" r="16" />
+						   <!-- <circle class="eye-white" cx="80" cy="105" r="16" />
 						   <circle id="pupil-l" class="pupil" cx="80" cy="105" r="8" />
 						   <circle class="eye-white" cx="140" cy="105" r="16" />
-						   <circle id="pupil-r" class="pupil" cx="140" cy="105" r="8" />
+						   <circle id="pupil-r" class="pupil" cx="140" cy="105" r="8" /> -->
+						   <ellipse  class="eye-white" cx="80" cy="105" rx="16" ry="10" />
+						   <ellipse id="pupil-l" class="pupil" cx="80" cy="105" rx="6" ry="10" />
+						   <ellipse  class="eye-white" cx="140" cy="105" rx="16" ry="10" />
+						   <ellipse id="pupil-r" class="pupil" cx="140" cy="105" rx="6" ry="10" />
 					</g>
 					<g id="eyes-blink">
 						   <path class="eye-closed" d="M68,105 Q80,95 92,105" />
